--- a/slides/Lecture1/index.html
+++ b/slides/Lecture1/index.html
@@ -24,15 +24,7 @@ class: center, middle
 
 ???
 
-Dear Ms Hickey, 
-
-Please find these slides for your review. This version includes the previously mentioned Simpsons memes.
-
-The planned special pre-booked session will follow very shortly (i.e. tomorrow, for example? tonight there's Tennis! *shrug)
-
-Kindest regards, 
-
-Dan/Dani/Bear
+My comments when I present
 
 ---
 class: center, middle
@@ -89,7 +81,7 @@ class: center
 5. Discussion and Current Work
 
 ---
-class: inverse, center, middle
+class: section, center, middle
 
 
 
@@ -234,7 +226,7 @@ which can be written for convenience as the exponents in the log
 
 ### e.g. via the **Laplace Approximation** `\(\rightarrow \color{red}{\tilde{\mathcal{L}}\left(\mathbf{\theta}\right)}\)`.
 ---
-class: inverse, center, middle
+class: section, center, middle
 
 # Bootstrapping Clustered Data
 
@@ -301,7 +293,7 @@ class: center, middle
 At this point in the talk it appears that Parametric Bootstrap (approach based on simulations) is the only feasible and convenient alternative 
 
 ---
-class: inverse, center, middle
+class: section, center, middle
 
 # Bootstrapping Clustered Data via a Weighted Laplace Approximation* 
 
@@ -318,7 +310,7 @@ That said, it also help us segue into the title of the talk
 What is it that we propose?
 
 ---
-class: dark, center, middle
+class: subsection, center, middle
 
 
 
@@ -374,12 +366,12 @@ class: dark, center, middle
 ### 3.(4. and 5.)  **Evaluate** : Package `TMB` (`C++` Templates and `R`)
 
 ---
-class: inverse, center, middle
+class: section, center, middle
 
 # (Some) Properties
 
 ---
-class: dark, center, middle
+class: subsection, center, middle
 
 # The Good &lt;svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" style="height:1em;fill:currentColor;position:relative;display:inline-block;top:.1em;"&gt;  [ comment ]  &lt;path d="M466.27 286.69C475.04 271.84 480 256 480 236.85c0-44.015-37.218-85.58-85.82-85.58H357.7c4.92-12.81 8.85-28.13 8.85-46.54C366.55 31.936 328.86 0 271.28 0c-61.607 0-58.093 94.933-71.76 108.6-22.747 22.747-49.615 66.447-68.76 83.4H32c-17.673 0-32 14.327-32 32v240c0 17.673 14.327 32 32 32h64c14.893 0 27.408-10.174 30.978-23.95 44.509 1.001 75.06 39.94 177.802 39.94 7.22 0 15.22.01 22.22.01 77.117 0 111.986-39.423 112.94-95.33 13.319-18.425 20.299-43.122 17.34-66.99 9.854-18.452 13.664-40.343 8.99-62.99zm-61.75 53.83c12.56 21.13 1.26 49.41-13.94 57.57 7.7 48.78-17.608 65.9-53.12 65.9h-37.82c-71.639 0-118.029-37.82-171.64-37.82V240h10.92c28.36 0 67.98-70.89 94.54-97.46 28.36-28.36 18.91-75.63 37.82-94.54 47.27 0 47.27 32.98 47.27 56.73 0 39.17-28.36 56.72-28.36 94.54h103.99c21.11 0 37.73 18.91 37.82 37.82.09 18.9-12.82 37.81-22.27 37.81 13.489 14.555 16.371 45.236-5.21 65.62zM88 432c0 13.255-10.745 24-24 24s-24-10.745-24-24 10.745-24 24-24 24 10.745 24 24z"&gt;&lt;/path&gt;&lt;/svg&gt;
 
@@ -473,7 +465,7 @@ class: middle
 ### &lt;svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" style="height:1em;fill:currentColor;position:relative;display:inline-block;top:.1em;"&gt;  [ comment ]  &lt;path d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"&gt;&lt;/path&gt;&lt;/svg&gt;  `\(\sqrt{n} \left(\widehat{\mathbf{\sigma}}^{*} - \widehat{\sigma}\right)\)` is &lt;svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" style="height:1em;fill:currentColor;position:relative;display:inline-block;top:.1em;"&gt;  [ comment ]  &lt;path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"&gt;&lt;/path&gt;&lt;/svg&gt; 
 
 ---
-class: dark, middle, center 
+class: subsection, middle, center 
 
 # Simulations
 --
@@ -607,7 +599,7 @@ class: center
 
 
 ---
-class: dark, middle, center 
+class: subsection, middle, center 
 
 # Simulations
 --
@@ -741,7 +733,7 @@ class: center
     - Possible **fix**: increases in `\(n_i\)`. 
     
 ---
-class: inverse, center, middle
+class: section, center, middle
 
 # Discussion and Current Work
 
@@ -833,12 +825,12 @@ Travel Grant accorded by ViCBiostat and Monash University, Melbourne.
 
 ---
 
-class: inverse, center, middle
+class: section, center, middle
 
 # Appendix
 
 ---
-class: dark , center, middle
+class: subsection , center, middle
 
 # (Some) Theory
 
@@ -998,7 +990,7 @@ Q_{kl}
 ]
 ]
 ---
-class: dark, middle, center
+class: subsection, middle, center
 
 # Simulations 
 
@@ -1136,7 +1128,7 @@ class: center
 "countIncrementalSlides": false,
 "ratio": "16:9",
 "navigation": {
-"scroll": true
+"scroll": false
 }
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
