Fixed typos on the Tree

--- a/slides/Lecture0.html
+++ b/slides/Lecture0.html
@@ -44,6 +44,10 @@ class: section, center, middle
 </div>
 ]
 ]
+
+???
+
+My name is Daniel Flores Agreda and I'm a Data Science CD and Instructor
 --
 .pull-right[
 .center[
@@ -187,6 +191,16 @@ class: center, middle
 
 .footnote[.footnotesize[Inter-cantonal migration in Switzerland in 2016, an interactive map by Ilya Bobadin with data from the Swiss Federal Statistical Office. [https://flowmap.blue/](https://flowmap.blue/)].]
 
+???
+
+Data is produced at a breakneck pace. Generated from surveys but also from devices and (more or less invasive) websites and apps. 
+
+This example comes from a survey on the relocation and migration. Here one can see the amounts  of local migration between cantons. 
+
+Accessing this data could inform decision-makers on projects such as housing or mobility infrastructure. It can inform economists on the reasons why some cantons become more attractive over time, etc. 
+
+But this data needs to be analised in order to make value. 
+
 ---
 class: subsection, center, middle
 
@@ -201,6 +215,11 @@ class: center, middle
 
 ### The discipline that deals with the .pink[collection] , .pink[presentation], .pink[analysis] and .pink[interpretation] of **Data**.
 
+
+???
+
+Today, we have enormous algorithmic and computing power,but in the end, it those methods rely to a great extent on statistical methods. 
+
 ---
 background-image: url(https://i.redd.it/8r2fd78pgna51.png)
 background-size: fill
@@ -209,10 +228,18 @@ class: center, middle
 
 
 .footnote[.footnotesize[_Thinking of learning ML this weekend, is there math?_ (2020). Retrieved from [r/DataScienceMemes](https://www.reddit.com/r/DataScienceMemes/comments/hqi8sv/thinking_of_learning_ml_this_weekend_is_there_math/?utm_source=share&amp;utm_medium=web2x&amp;context=3)]]
+
+???
+
+In other words, they have always been about statistics.
 ---
 class: subsection, center, middle
 
 # To build **Statistical Methods** we rely on **Probability**
+
+???
+
+But statistics is a mathematical tool that relies on mathematics to model random phenomena. 
 
 ---
 class: center, middle
@@ -232,8 +259,23 @@ class: subsubsection, center, middle
 
 # Illustration
 
+???
+
+Let me illustrate with a very simple model how to characterise a simple 
+
 ---
 # Illustration : Price of a Stock
+
+Prices of stocks move up on down according to the wills of investors.
+
+--
+
+To a great extent they are **uncertain**
+
+???
+We could model these fluctuations using a probability model, e.g :
+
+--
 
 Let `\(S_0\)` denote the price of the Stock at time `\(t_0\)`, and consider that:
 
@@ -289,14 +331,15 @@ Hence, with `\(S_0 = 1\)`:
 
 - The probability of `\(S_2 = d^2 = 4\)` is `\((1-p)^2\)`
 
-- The probability of `\(S_2 = d^2 = 1\)` is `\((1-p)p+p(1-p)\)`
+- The probability of `\(S_2 = ud = 1\)` is `\((1-p)p+p(1-p)\)`
+
 ---
 
 class: section, center, middle
 
 # Break
 
-<div class="countdown" id="timer_60370156" style="top:50%;right:0;left:0;margin:5%;padding:50px;font-size:6em;" data-warnwhen="0">
+<div class="countdown" id="timer_60378643" style="top:50%;right:0;left:0;margin:5%;padding:50px;font-size:6em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
